force-app/main/default/objects/STR_RuleGroup__c/STR_RuleGroup__c.object-meta.xml
<CustomObject>
    <label>Rule Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>