force-app/main/default/objects/STR_RuleGroup__c/fields/STR_CHK_IsIncluded__c.field-meta.xml
<CustomField>
    <fullName>STR_CHK_IsIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to include this group in the rule</inlineHelpText>
    <label>Included</label>
    <type>Checkbox</type>
</CustomField>