force-app/main/default/objects/STR_RuleGroup__c/fields/STR_LKP_SignatureRule__c.field-meta.xml
<CustomField>
    <fullName>STR_LKP_SignatureRule__c</fullName>
    <label>Signature Rule</label>
    <referenceTo>STR_SignatureRule__c</referenceTo>
    <relationshipName>SignersGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>