force-app/main/default/objects/STR_RuleGroup__c/fields/STR_NUM_Level__c.field-meta.xml
<CustomField>
    <fullName>STR_NUM_Level__c</fullName>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>