force-app/main/default/objects/STR_RuleGroup__c/fields/STR_TXT_GroupId__c.field-meta.xml
<CustomField>
    <fullName>STR_TXT_GroupId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>