force-app/main/default/objects/STR_RuleGroup__c/recordTypes/STR_RuleGroup.recordType-meta.xml
<RecordType>
    <fullName>STR_RuleGroup</fullName>
    <active>true</active>
    <label>Rule Group</label>
</RecordType>